--- a/views/cardList.pug
+++ b/views/cardList.pug
@@ -11,7 +11,7 @@ block content
           i.ti-pin-alt.mr-1    
           ="Yığın Oluştur"
     each val in data
-      .col-lg-3.col-sm-6
+      .col-lg-4.col-sm-6
         .card 
           .content
             .row.pointer(onclick=`location.href='${url}/${val.val1}'`)
@@ -30,6 +30,6 @@ block content
               .primaryColor.mr-3.pointer(onclick=`location.href='${url}/Yığını_Düzenle?name=${val.val1}'`)
                 i.ti-pencil.mr-1
                 ="Düzenle"
-              .dangerColor.mr-3.pointer(onclick=`changeCollection("delete","${val.val1}","")`)
+              .dangerColor.mr-3.pointer(onclick=`changeCollection("delete","${val.val1}","","")`)
                 i.ti-na.mr-1
                 ="Sil"
