--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,6 +27,8 @@ html
     link(href='/stylesheets/demo.css', rel='stylesheet')
     // Fonts and icons
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
+    //checkbox 
+    link(href='https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css', rel='stylesheet')
     //jquery confirm
     link(href='https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Muli:400,300', rel='stylesheet', type='text/css')
@@ -130,8 +132,6 @@ html
     // Core JS Files
     script(src='/javascripts/jquery.min.js', type='text/javascript')
     script(src='/javascripts/bootstrap.min.js', type='text/javascript')
-    // Checkbox, Radio & Switch Plugins
-    script(src='/javascripts/bootstrap-checkbox-radio.js')
     // Charts Plugin
     script(src='/javascripts/chartist.min.js')
     // cookie Plugin
@@ -152,7 +152,5 @@ html
     script(src='/javascripts/owner.js')
     // Paper Dashboard DEMO methods, don't include it in your project!
     script(src='/javascripts/demo.js')
-    script(type='text/javascript').
-      $(document).ready(function () {
-      
-      });
+    block script
+   
