--- a/views/table.pug
+++ b/views/table.pug
@@ -1,6 +1,11 @@
 extends layout
 
 block content
+  .text-right.mb-4
+    a(href=url+"/Yeni_Kayıt")
+      button.ml-4.btn.btn-sm.btn-success(type='button')  
+        i.ti-pin-alt.mr-1    
+        ="Kayıt Oluştur"
   .row
     .col-md-12
       .card
