--- a/public/public/stylesheets/owner.css
+++ b/public/public/stylesheets/owner.css
@@ -51,14 +51,76 @@ a.primaryColor:hover{
 .table thead {
   background-color: #faefcf;
 }
+.table thead tr th{
+  border-right: 2px solid red;
+}
 .table tbody tr:hover{
   background-color: #f0a988 !important;
   cursor: pointer;
 }
-.cover{
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
+.auto{
   margin: auto;
-  min-height:100%;
+}
+.w-50{
+  width: 50%;
+}
+
+.w-20{
+  width: 20%;
+}
+.h-auto{
+  height: auto !important;
+}
+.bottom{
+  bottom: 0;
+}
+.right{
+  right: 0;
+}
+.absulute{
+  position: absolute !important;
+}
+.ownImage{
+  background-image: url("https://media.sheridan.com.au/catalog/product/cache/1/image/1200x800/9df78eab33525d08d6e5fb8d27136e95/i/n/interwoven_wallpaper_shr.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  
+}
+.ownBC{
+  background-color: #b2a19b82;
+}
+.fs18{
+  font-size: 18px;
+}
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #EB5E28;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
 }
