--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,45 +32,17 @@ html
     link(href='https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Muli:400,300', rel='stylesheet', type='text/css')
     link(href='/public/stylesheets/themify-icons.css', rel='stylesheet')
-    
     .wrapper
       .sidebar(data-background-color='white', data-active-color='danger')
         .sidebar-wrapper
           .logo
             i.ti-crown(style='color: #EB5E28;  font-size: 30px;  display: block;   margin: auto; text-align:center;')
           ul.nav
-            li
-              a(href='/dashboard')
-                i.ti-panel
-                p Dashboard
-            li
-              a(href='/database')
-                i.ti-user
-                p Database    
-            li
-              a(href='user.html')
-                i.ti-user
-                p User Profile
-            li
-              a(href='table.html')
-                i.ti-view-list-alt
-                p Table List
-            li
-              a(href='typography.html')
-                i.ti-text
-                p Typography
-            li
-              a(href='icons.html')
-                i.ti-pencil-alt2
-                p Icons
-            li
-              a(href='maps.html')
-                i.ti-map
-                p Maps
-            li
-              a(href='notifications.html')
-                i.ti-bell
-                p Notifications
+            each val in menu
+              li
+                a(href='/'+val)
+                  i.ti-panel
+                  p=val
       .main-panel
         nav.navbar.navbar-default
           .container-fluid
