--- a/views/login.pug
+++ b/views/login.pug
@@ -46,7 +46,7 @@ html
             input.form-control.border-input(type='password',name="password",enforced)    
       .col-md-12.p-3
         .auto.w-20
-          button.ml-4.btn.btn-lg.btn-muted.btn-fill(onclick="login(); return false")
+          button.btn.btn-lg.btn-muted.btn-fill(onclick="login(); return false")
             i.ti-user.mr-1    
             ="Giriş Yap"
     footer.footer.absulute.right.bottom
