--- a/public/public/stylesheets/owner.css
+++ b/public/public/stylesheets/owner.css
@@ -81,8 +81,8 @@ a.primaryColor:hover{
   position: absolute !important;
 }
 .ownImage{
-  background-image: url("https://media.sheridan.com.au/catalog/product/cache/1/image/1200x800/9df78eab33525d08d6e5fb8d27136e95/i/n/interwoven_wallpaper_shr.jpg");
-  background-repeat:no-repeat;
+ /* background-image: url("https://media.sheridan.com.au/catalog/product/cache/1/image/1200x800/9df78eab33525d08d6e5fb8d27136e95/i/n/interwoven_wallpaper_shr.jpg");
+ */ background-repeat:no-repeat;
   background-size: cover;
   
 }
@@ -138,4 +138,7 @@ th [type]{
 }
 .table tbody tr td{
   border-right: 2px solid red;
+}
+[type='array'] .row{
+  margin-right: 10px;
 }
