--- a/views/layout.pug
+++ b/views/layout.pug
@@ -93,10 +93,10 @@ html
             nav.pull-left
               ul
                 li
-                  a(href='http://blog.creative-tim.com')
+                  a(href='/')
                     | Blog
                 li
-                  a(href='http://www.creative-tim.com/license')
+                  a(href='/')
                     | Licenses
             .copyright.pull-right
               | ©
