--- a/public/public/stylesheets/owner.css
+++ b/public/public/stylesheets/owner.css
@@ -246,14 +246,18 @@ a.primaryColor:hover{
 .removeTopPadding{
   padding: 0px 15px 10px 15px !important;
 }
-th span{
-  padding-left: 30px;
-}
+
 th [type]{
   text-align: center;
   border-radius: 25px;
   border: 2px dashed red;
   width: 100%;
+}
+th [type='number']{
+  text-align: center;
+  border-radius: 25px;
+  border: 2px dashed red;
+  width: 49%;
 }
 .table tbody tr td{
   border-right: 2px solid red;
@@ -261,4 +265,12 @@ th [type]{
 [type='array'] .row{
   margin-right: 10px;
 }
-
+.table thead tr th div i{
+  position: relative;
+  float: right;
+}
+.table thead tr th div{
+  width: 100%;
+  padding-left: 30px;
+  cursor: pointer;
+}
