--- a/views/layout.pug
+++ b/views/layout.pug
@@ -41,7 +41,7 @@ html
             if menu != null 
               each val in menu
                 li
-                  a(href='/'+val.text)
+                  a(href='/'+val.link)
                     i(class=val.icon)
                     p=val.text
       .main-panel
