--- a/public/public/stylesheets/owner.css
+++ b/public/public/stylesheets/owner.css
@@ -279,3 +279,8 @@ th [type='number']{
   width: 30% !important;
   margin-left: 30px;
 }
+
+[type='editor']{
+  padding: 0 !important;
+  height: auto !important;
+}
