--- a/views/table.pug
+++ b/views/table.pug
@@ -16,7 +16,7 @@ block content
     
     .col-md-12
       .card
-        .content.table-responsive.table-full-width.removeTopPadding(collection=collection)  
+        .overflowAuto.content.table-responsive.table-full-width.removeTopPadding(collection=collection)  
           !=content
     .col-md-12.mt-5.mb-4    
       .counter(key="page")
