--- a/views/layout.pug
+++ b/views/layout.pug
@@ -64,22 +64,16 @@ html
                     i.ti-panel
                     p.ml-1 Duyurular
                 li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
+                  a.dropdown-toggle(href='#', data-toggle='dropdown')#bell
+                    #notifCount
                     i.ti-bell
                     p.notification 
                     p.ml-1 Bildirimler
                     b.caret
-                  ul.dropdown-menu
+                  ul.dropdown-menu#Notifications
                     li
                       a(href='#') Notification 1
-                    li
-                      a(href='#') Notification 2
-                    li
-                      a(href='#') Notification 3
-                    li
-                      a(href='#') Notification 4
-                    li
-                      a(href='#') Another notification
+
                 li
                   a(href='#')
                     i.ti-settings
