--- a/views/collectionViewer.pug
+++ b/views/collectionViewer.pug
@@ -5,7 +5,7 @@ block content
     button.ml-4.btn.btn-sm.btn-success(type='button',onclick=`changeCollection('${method}',$("[data-key='collectionName']").val(),$("[data-key='collectionName']").attr("oldValue"),${(method=="create"?"editor.get()":"''")})`) 
       i.ti-check-box.mr-1    
       ="Kaydet"
-    button.ml-4.btn.btn-sm.btn-danger(type='button',onclick=`location.href=backPageUrl`) 
+    button.ml-4.btn.btn-sm.btn-danger(type='button',onclick=`location.href=gBackPageUrl`) 
       i.ti-direction.mr-1  
       ="Vazgeç"
   .row
