--- a/views/form.pug
+++ b/views/form.pug
@@ -9,7 +9,7 @@ block content
     button.ml-4.btn.btn-sm.btn-success(type='button',action-method=`${method}`,id=`${id}`,collection=`${collection}`) 
       i.ti-check-box.mr-1    
       ="Kaydet"
-    button.ml-4.btn.btn-sm.btn-info(type='button',onclick=`location.href=backPageUrl`) 
+    button.ml-4.btn.btn-sm.btn-info(type='button',onclick=`location.href=gBackPageUrl`) 
       i.ti-direction.mr-1  
       ="Vazgeç"
   .row
