--- a/views/announcements.pug
+++ b/views/announcements.pug
@@ -8,27 +8,27 @@ block content
       .header
         h4.title 
         p.category 
-      .content(style="height:100%")
+      .content
         each val,index in data
           if index%2
-            div(style="height:  300px")
-              .col-md-5(style="overflow: auto;height: 100%;")
+            div(style="justify-content: space-around;display: flex;")
+              div(style="width: 40%;overflow: auto;")
                 .card(style="background-color: #e8e8e8;")
                   div(style="position: absolute;top:7;right:15")=val.date
                   .header
                     h4.title=val.title
                   .content!= val.text
-              .col-md-2.text-center
+              div.text-center(style="width: 20%;")
                 i.fa.fa-circle(style="font-size: 25px;",class=val.color)
-                div(style="background: #a7a7a7;width: 3px;height: 275px;margin: auto;")
-              .col-md-5
+                div(style="background: #a7a7a7;width: 3px;height: 100%;margin: auto;")
+              div(style="width: 40%;")
           else
-            div(style="height:  300px")
-              .col-md-5
-              .col-md-2.text-center
+            div(style="justify-content: space-around;display: flex;")
+              div(style="width: 40%;")
+              div.text-center(style="width: 20%;")
                 i.fa.fa-circle(style="font-size: 25px;",class=val.color)
-                div(style="background: #a7a7a7;width: 3px;height: 275px;margin: auto;")
-              .col-md-5(style="overflow: auto;height: 100%;")
+                div(style="background: #a7a7a7;width: 3px;height: 100%;margin: auto;")
+              div(style="width: 40%;overflow: auto;")
                 .card(style="background-color: #e8e8e8;")
                   div(style="position: absolute;top:7;right:15")=val.date
                   .header
