--- a/public/public/stylesheets/owner.css
+++ b/public/public/stylesheets/owner.css
@@ -300,4 +300,11 @@ display: inline;
 .simpleHr{
     border-top: 1px solid red;
     margin: 2px 10px;
+    width: 100%;
+}
+.pointerNone{
+  pointer-events:none;
+}
+.a9c555{
+  border: 1px solid #a9c555;
 }
