--- a/views/login.pug
+++ b/views/login.pug
@@ -44,11 +44,9 @@ html
           .form-group
             Label Şifre
             input.form-control.border-input(type='password',name="password",enforced)    
-      .col-md-12.p-3
-        .auto.w-20
-          button.btn.btn-lg.btn-muted.btn-fill(onclick="login(); return false")
-            i.ti-user.mr-1    
-            ="Giriş Yap"
+      button.show.auto.btn.btn-lg.btn-muted.btn-fill(onclick="login(); return false")
+        i.ti-user.mr-1    
+        ="Giriş Yap"
     footer.footer.absulute.right.bottom
       .container-fluid
         .copyright.pull-right
